[package]
name = "redis-logger"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pulsar-core = { workspace = true }
bpf-common = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
redis = { version = "0.25.4", features = ["json", "tokio-comp"] }
redis_rs = "0.9.0"

